--- a/tex/resume.tex
+++ b/tex/resume.tex
@@ -15,14 +15,14 @@
 \section{Experience}
 \runsubsection{\href{http://www.reddit.com/}{Reddit Inc.\\}}
     \descript{Staff Software Engineer}
-    \location{\hfill August 2019 - Right Meow}
+    \location{\hfill August 2019 -- Right Meow} % chktex 8
     \begin{tightemize}
         \item
             Global Director of Dank Memes
     \end{tightemize}
 
     \descript{Senior Software Engineer II}
-    \location{\hfill July 2018 - August 2019}
+    \location{\hfill July 2018 -- August 2019} % chktex 8
     \begin{tightemize}
         \item
             Junior Director of Dank Memes
@@ -30,10 +30,10 @@
 
 \runsubsection{\href{http://www.chartbeat.com/}{Chartbeat Inc.\\}}
     \descript{Head of Backend Engineering}
-    \location{\hfill October 2016 – July 2018}
+    \location{\hfill October 2016 -- July 2018} % chktex 8
     \begin{tightemize}
         \item
-            Built "MrRoboto," a replicated C++ key-value store capable of
+            Built `MrRoboto', a replicated C++ key-value store capable of
             writing over 500k records/sec and computing arbitrary views,
             defined at runtime, on stored data. Persisted data in a LMDB
             copy-on-write b-tree that supports transactions, snapshots,
@@ -41,7 +41,7 @@
             linearly with CPU cores. Used Chain Replication to persist data
             across nodes
         \item
-            Built "Miata", a convenient real-time streaming analytics framework
+            Built `Miata', a convenient real-time streaming analytics framework
             for prototyping products using Chartbeat's streaming data firehose
             using Kafka, ZeroMQ and Python
         \item
@@ -49,22 +49,21 @@
             weekly 1-on-1s with each team member and advised each on personal,
             team, and project development
         \item
-            Modernized old Nagios reporting and alerting infrastructure
+            Modernized observibility, reporting, and alerting infrastructure
     \end{tightemize}
     \vspace{5pt}
 
     \descript{Backend Team Lead}
-    \location{\hfill October 2015 – October 2016}
+    \location{\hfill October 2015 -- October 2016} % chktex 8
     \begin{tightemize}
         \item
-            Led research and development team responsible for prototyping new
-            and experimental products. Presented research and new products to
-            the Board and communicated the progress of active experiments to
-            the company
+            Led research and development team responsible for developing
+            experimental products. Presented research and new products to
+            Chartbeat Board and communicated the progress of active experiments
+            to the company
         \item
-            Built "Goby," a dashboard for communicating the most engaging
-            articles (by time) active within the Chartbeat news network at the
-            present moment
+            Built `Goby', a dashboard for communicating the most engaging
+            articles active within the Chartbeat News Network
         \item
             Developed share of voice benchmarking tool to aid publishers in
             measuring their contribution to a news topic
@@ -72,9 +71,8 @@
             Created real-time targeting platform for ad distributors to
             identify and monetize articles with high engagement
         \item
-            Implemented Robust Principal Component Analysis (RPCA) outlier
-            detection for surfacing anomalous traffic patterns in topics
-            published on the Chartbeat network
+            Implemented RPCA outlier detection for surfacing anomalous traffic
+            patterns in topics published on the Chartbeat network
         \item
             Taught a recurring Python language class covering advanced features
             of the language such as writing custom C extensions and debugging
@@ -83,39 +81,38 @@
     \vspace{5pt}
 
     \descript{Backend Developer}
-    \location{\hfill August 2014 – October 2015}
+    \location{\hfill August 2014 -- October 2015} % chktex 8
     \begin{tightemize}
         \item
             Open-sourced Parselmouth, an object-oriented interface for
             abstracting away the ugly parts of ad server APIs
         \item
-            Developed a Line Item Recommendation product that suggested new
-            impression target goals that would facilitate hitting a defined
-            engagement goal
+            Developed a Line Item Recommendation product for suggesting new
+            impression to hit a defined engagement goal on time
         \item
             Built system for indexing screenshots of advertisement creatives
             over time
         \item
-            Primary backend engineer behind "Loveboat," Chartbeat Advertising's
+            Primary backend engineer behind `Loveboat', Chartbeat Advertising's
             V2 APIs
     \end{tightemize}
 
 \runsubsection{\href{http://www.moat.com/}{Moat Inc. \\}}
     \descript{Backend Developer}
-    \location{\hfill May 2012 – August 2014}
+    \location{\hfill May 2012 -- August 2014} % chktex 8
     \begin{tightemize}
         \item
-            Engineered a network of web crawlers capable of programmatically
+            Engineered a network of web crawlers for programmatically
             detecting, capturing, and indexing online advertisements across
             different geographical regions
         \item
             Designed ETL pipeline for aggregating warehoused index results
         \item
-            Developed API for aggregate results and Pyramid web application for
+            Developed analytics reporting API and Pyramid web application for
             serving reports to clients
         \item
-            Implemented homebrew heterogeneous server role and configuration
-            deployment system in Amazon EC2
+            Implemented server role and configuration deployment system in
+            Amazon EC2
     \end{tightemize}
 
 \section{Education}
